<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="com.example.vihaan.whatsappclone.ui.homescreen.MainActivity">

  <item
    android:id="@+id/ic_videocall"
    android:icon="@drawable/ic_video_white"
    android:orderInCategory="100"
    app:showAsAction="always"
    android:title="Call" />

  <item
    android:id="@+id/ic_call"
    android:icon="@drawable/ic_call_white"
    android:orderInCategory="100"
    app:showAsAction="always"
    android:title="Call" />

  <item
    android:id="@+id/action_view_contact"
    android:orderInCategory="100"
    android:title="@string/action_view_contact"
    app:showAsAction="never" />

  <item
    android:id="@+id/action_media"
    android:orderInCategory="100"
    android:title="@string/action_media"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_search"
    android:orderInCategory="100"
    android:title="@string/action_search"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_mute_notifications"
    android:orderInCategory="100"
    android:title="@string/action_mute_notifications"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_wallpaper"
    android:orderInCategory="100"
    android:title="@string/action_wallpaper"
    app:showAsAction="never" />

  <item
    android:id="@+id/action_more"
    android:orderInCategory="100"
    android:title="@string/action_more"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_report"
    android:orderInCategory="100"
    android:title="@string/action_report"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_block"
    android:orderInCategory="100"
    android:title="@string/action_block"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_clear_chat"
    android:orderInCategory="100"
    android:title="@string/action_clear_chat"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_export_chat"
    android:orderInCategory="100"
    android:title="@string/action_export_chat"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_add_shortcut"
    android:orderInCategory="100"
    android:title="@string/action_add_shortcut"
    app:showAsAction="never" />
</menu>
