<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.design.widget.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      app:layout_scrollFlags="scroll|enterAlways"
      app:popupTheme="@style/AppTheme.PopupOverlay"
      app:title="@string/action_settings">

    </android.support.v7.widget.Toolbar>
  </android.support.design.widget.AppBarLayout>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/appbar">

    <LinearLayout
      android:id="@+id/account_privacy"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:paddingLeft="@dimen/spacing_large"
      android:paddingRight="@dimen/spacing_large"
      android:background="?attr/selectableItemBackground"
      android:clickable="true"
      android:gravity="center_vertical"
      android:minHeight="60dp"
      android:orientation="horizontal"
      android:focusable="true">

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/account_privacy"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"/>
    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@id/account_privacy"
      android:background="@color/grey_10"
      />

    <LinearLayout
      android:id="@+id/account_security"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="@dimen/spacing_large"
      android:paddingRight="@dimen/spacing_large"
      android:background="?attr/selectableItemBackground"
      android:layout_below="@id/account_privacy"
      android:clickable="true"
      android:gravity="center_vertical"
      android:minHeight="60dp"
      android:orientation="horizontal"
      android:focusable="true">

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/account_security"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"/>
    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@id/account_security"
      android:background="@color/grey_10"
      />

    <LinearLayout
      android:id="@+id/account_two_step_verification"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="@dimen/spacing_large"
      android:paddingRight="@dimen/spacing_large"
      android:background="?attr/selectableItemBackground"
      android:layout_below="@id/account_security"
      android:clickable="true"
      android:gravity="center_vertical"
      android:minHeight="60dp"
      android:orientation="horizontal"
      android:focusable="true">

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/account_two_step_verification"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"/>
    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@id/account_two_step_verification"
      android:background="@color/grey_10"
      />

    <LinearLayout
    android:id="@+id/account_change_number"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/spacing_large"
    android:paddingRight="@dimen/spacing_large"
    android:background="?attr/selectableItemBackground"
    android:layout_below="@id/account_two_step_verification"
    android:clickable="true"
    android:gravity="center_vertical"
    android:minHeight="60dp"
    android:orientation="horizontal"
    android:focusable="true">

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/account_change_number"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/black"/>
  </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@id/account_change_number"
      android:background="@color/grey_10"
      />

    <LinearLayout
      android:id="@+id/account_request_account_info"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="@dimen/spacing_large"
      android:paddingRight="@dimen/spacing_large"
      android:background="?attr/selectableItemBackground"
      android:layout_below="@id/account_change_number"
      android:clickable="true"
      android:gravity="center_vertical"
      android:minHeight="60dp"
      android:orientation="horizontal"
      android:focusable="true">

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/account_request_account_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"/>
    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@id/account_request_account_info"
      android:background="@color/grey_10"
      />

    <LinearLayout
      android:id="@+id/account_delete_my_account"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="@dimen/spacing_large"
      android:paddingRight="@dimen/spacing_large"
      android:background="?attr/selectableItemBackground"
      android:layout_below="@id/account_request_account_info"
      android:clickable="true"
      android:gravity="center_vertical"
      android:minHeight="60dp"
      android:orientation="horizontal"
      android:focusable="true">

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/account_delete_my_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"/>
    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@id/account_delete_my_account"
      android:background="@color/grey_10"
      />




  </RelativeLayout>


</android.support.constraint.ConstraintLayout>
